# cmake-cards-procedural

./: .gitignore  CMakeLists.txt  CMakeLists_old.txt  README.md  Rules.md  ToDo.md
src/: CMakeLists.txt  audio.cpp  audio.hpp  bootstrap.cpp  button.cpp  button.hpp  button_module.cpp  button_module.hpp  card.cpp  card.hpp  constants.hpp  cpu_brain.cpp  cpu_brain.hpp  debug_globals.hpp  fonts.cpp  fonts.hpp  game_play_phases.cpp  game_play_phases.hpp  game_rules.cpp  game_rules.hpp  game_scenes.cpp  game_scenes.hpp  game_status.cpp  game_status.hpp  game_turn.cpp  game_turn.hpp  helper_functions.hpp  imgui_sidebar.cpp  imgui_sidebar.hpp  main.cpp  player.cpp  player.hpp  program.cpp  run.cpp  textures.cpp  textures.hpp
src/resources/csv/: cards_db.csv
src/resources/shaders/: card_outline.frag
tests/: CMakeLists.txt  audio_test.cpp  button_test.cpp  card_test.cpp  game_rules_test.cpp  player_test.cpp  textures_test.cpp  unit_tests.cpp
vendors/: CMakeLists.txt
vendors/fast-cpp-csv-parser/: CMakeLists.txt
vendors/imgui/: CMakeLists.txt
vendors/raylib/: CMakeLists.txt
vendors/raylibcpp/: CMakeLists.txt
vendors/rlimgui/: CMakeLists.txt
